<resources>
    <string name="app_name">T5_GoogleCalendar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_calendar_list_title">Calendar Activities</string>
    <string name="fragment_calendar_list_activity_title">Title</string>
    <string name="fragment_calendar_list_activity_description">Description</string>
    <string name="item_calendar_event_list_event_title">Scheduled Event</string>
    <string name="item_calendar_event_list_event_subtitle">Title:</string>
    <string name="item_calendar_event_list_event_start_time">Start Time:</string>
    <string name="item_calendar_event_list_event_end_time">End Time:</string>
    <string name="fragment_form_event_title_main">Scheduled Event</string>
    <string name="fragment_form_event_name">Event\'s name</string>
    <string name="fragment_form_event_button_save">Save</string>
    <string name="fragment_form_fragment_time_end">Time End</string>
    <string name="fragment_form_fragment_time_start">Time Start</string>
</resources>